--- a/Application Code/Myproject/requirements.txt
+++ b/Application Code/Myproject/requirements.txt
@@ -169,7 +169,7 @@ widgetsnbextension==3.5.1
 wrapt==1.12.1
 xgboost==1.2.1
 gunicorn==20.0.4
-
+python-dotenv
 yahoo-fin==0.8.6
 zope.interface==5.2.0
 
